# IRetr

./: .gitignore  README.md  main.py  pyproject.toml
public/: index.html
public/css/: style.css
public/js/: main.js
src/: document.py  index_manager.py  query.py
