[project]
name = "information-retrieval"
version = "0.1.0"
requires-python = ">=3.11.0"
description = "Simple information retrieval system with vector search model"
authors = [
  { name = "vaslch0", email= "vasya.khoroshavin@gmail.com" },
]
maintainers = [
  { name = "vaslch0", email= "vasya.khoroshavin@gmail.com" },
]
dependencies = [
  "nltk >=3.8.1",
  "numpy >=1.26.2",
  "qdrant-client >=1.6.9",
  "scikit-learn >=1.3.2",
  "scipy >=1.11.4",
  "Flask >=3.0.0",
]